--- a/components/file-input/demo.html
+++ b/components/file-input/demo.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, minimum-scale=1.0, initial-scale=1.0, user-scalable=yes">
     <title>file-input demo</title>
 
-    <script src="../webcomponentsjs/webcomponents.js"></script>
+    <script src="../webcomponentsjs/webcomponents-lite.js"></script>
     <link rel="import" href="file-input.html">
 
     <!--Only used by the demo to add common bootstrap button styles to the file chooser-->
@@ -26,7 +26,7 @@
         <p>See the code for this demo in the <a href="https://github.com/garstasio/file-input/tree/gh-pages/components/file-input/demo.html">demo.html file</a>
         of the <a href="https://github.com/garstasio/file-input">file-input GitHub repository</a>.</p>
 
-        <file-input class="btn btn-primary" extensions='["jpeg", "jpg"]' minSize="500000" maxSize="3000000">
+        <file-input class="btn btn-primary" extensions='["jpeg", "jpg"]' min-size="500000" max-size="3000000">
             <span class="glyphicon glyphicon-file"></span> Select a file
         </file-input>
 
@@ -47,6 +47,10 @@
 </body>
 
 <script>
+    window.addEventListener('WebComponentsReady', function(e) {
+        document.body.removeAttribute('unresolved');
+    });
+
     document.getElementsByTagName('file-input')[0].addEventListener('change', function(event) {
         var valid = event.detail.valid,
             invalid = event.detail.invalid,
